# arknights-frame-assistant-macos

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: calibrate.ts  debug.ts  dom.ts  events.ts  i18n.ts  keybind.ts  main.ts  ratio.ts  render.ts  state.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  desktop.rs  lib.rs  main.rs  startup.rs  state.rs  touch_core.rs
src-tauri/src/desktop/: tray.rs
src-tauri/src/ipc/: commands.rs  protocol.rs
src-tauri/src/touch_core/: action.rs  definition.rs  mouse.rs  position.rs  window.rs
src-tauri/src/touch_core/definition/: advance_12ms.rs  advance_166ms.rs  advance_33ms.rs  pause_retreat.rs  pause_selected.rs  pause_skill.rs  quick_retreat.rs  quick_skill.rs  switch_pause.rs  switch_speed.rs
