[package]
name = "arknights-frame-assistant-macos"
version = "0.1.1"
description = "明日方舟帧操小助手"
authors = ["inkpear202413@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arknights_frame_assistant_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.11"
cgevents = { version = "0.10.1", features = ["async"] }
mado = "0.0.9"
tokio = { version = "1.52.3", features = ["sync", "macros", "rt"] }
anyhow = "1.0.103"
log = "0.4.33"
spin_sleep = "1.3.3"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
